--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="wrapper">
-
+    <p style="text-align:right; position: absolute; right: 2%; top: 25%;"><iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E371cAhPiOQQ7" width=300 height=380 frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </p>
     <div class="dialogs">
 
         <div class="cover"></div>
